New Test Titre with explain

--- a/html-cours/index.html
+++ b/html-cours/index.html
@@ -7,8 +7,31 @@
  <!-- Le Titre de la page -->
     <title>Cours HTML</html></title>
     <!--Icone de l'onglet -->
-<link rel="shortcut icon" href="logohtml5.png"
- <body>
-    
+<link rel="shortcut icon" href="logohtml5.png">
+</head> 
+
+<body>
+    <section>
+        
+        <div>
+            <h1>Texte - Titre - H1</h1>
+            <p>Text basic, <em>voici un text en italic</em>. <strong>Et un en gras</strong>. <span>L'élement en span ne revient pa à la ligne</span><div class=""></div></p>
+        </div><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum deserunt quod nisi doloribus dolorum quaerat necessitatibus debitis, velit suscipit, assumenda ut, aperiam quibusdam architecto asperiores ducimus id amet facilis! Iure?</p>
+        <div>
+            <h2>Titre - H2</h2>
+        </div>
+        <div>
+            <h3>Titre - H3</h3>
+        </div>
+        <div>
+            <h4>Titre - H4</h4>
+        </div>
+        <div>
+            <h5>Titre - H5</h5>
+        </div>
+        <div>
+            <h6>Titre - H6</h6>
+        </div>
+    </section>
 </body>
 </html>
